# kde-baseapps

./: CMakeLists.txt  README
dolphin/src/: dolphin.appdata.xml  dolphinpart.desktop
kappfinder/: kappfinder.desktop
kappfinder/apps/Development/: assistant.desktop  (+6 more)
kdepasswd/: CMakeLists.txt  kdepasswd.cpp  kdepasswd.desktop  kdepassword_debug.cpp  kdepassword_debug.h  org.kde.kdepasswd.desktop  passwd.cpp  passwd.h  passwddlg.cpp  passwddlg.h
kdepasswd/docs/: CMakeLists.txt  index.docbook
kdepasswd/kcm/: CMakeLists.txt  chfacedlg.cpp  chfnprocess.cpp  chfnprocess.h  kcm_useraccount.desktop  main.cpp
keditbookmarks/: CMakeLists.txt  actionsimpl.cpp  bookmarkinfowidget.cpp  bookmarkinfowidget.h  bookmarkiterator.cpp  bookmarklistview.cpp  bookmarklistview.h  exporters.cpp  exporters.h  favicons.cpp  favicons.h  faviconupdater.cpp  faviconupdater.h  globalbookmarkmanager.cpp  importers.cpp  importers.h  kbookmarkmerger.cpp  kebsearchline.cpp  kebsearchline.h  main.cpp  org.kde.keditbookmarks.desktop  testlink.cpp  testlink.h  toplevel.cpp  toplevel.h
keditbookmarks/kbookmarkmodel/: CMakeLists.txt  commandhistory.cpp  commands.cpp  commands.h  commands_p.h  kinsertionsort_p.h  model.cpp  model.h  treeitem.cpp  view.cpp
keditbookmarks/kbookmarkmodel/tests/: CMakeLists.txt  kbookmarkmodeltest.cpp  kde-bug-258505-bookmarks.xml
kfind/: findpart.desktop  kfind.appdata.xml  kfind.desktop  kfindpart.desktop
kinfocenter/: kinfocenter.desktop
kinfocenter/ioslaveinfo/: ioslaveinfo.desktop
kinfocenter/nics/: nic.desktop
kinfocenter/samba/: smbstatus.desktop
kinfocenter/solidproc/: kcmsolidproc.desktop
kinfocenter/usbview/: kcmusb.desktop
kinfocenter/view1394/: kcmview1394.desktop
konq-plugins/adblock/: plugin_adblock.desktop
konq-plugins/akregator/: akregator_konqfeedicon.desktop
konq-plugins/autorefresh/: autorefresh.desktop
konq-plugins/imagerotation/: imageconverter.desktop  jpegorient.desktop
konq-plugins/kimgalleryplugin/: kimgalleryplugin.desktop
konq-plugins/microformat/: mf_konqmficon.desktop
konq-plugins/searchbar/: searchbar.desktop
konqueror/: Home.desktop  kfmclient.desktop  konqbrowser.desktop  konqfilemgr.desktop  konqueror.appdata.xml  konqueror.desktop  konquerorsu.desktop  profile_filemanagement.desktop  profile_filepreview.desktop  profile_midnightcommander.desktop  profile_simplebrowser.desktop  profile_tabbedbrowsing.desktop  profile_webbrowsing.desktop
konqueror/about/: konq_aboutpage.desktop
konqueror/kttsplugin/: khtmlkttsd.desktop
konqueror/preloader/: konqy_preloader.desktop
konqueror/quickprint/: text-ada-print.desktop  text-c++-print.desktop  text-c++h-print.desktop  text-c-print.desktop  text-ch-print.desktop  text-css-print.desktop  text-diff-print.desktop  text-html-print.desktop  text-java-print.desktop  text-log-print.desktop  text-makefile-print.desktop  text-pas-print.desktop  text-perl-print.desktop  text-print.desktop  text-python-print.desktop  text-tcl-print.desktop  text-tex-print.desktop  text-xml-print.desktop  text-xslt-print.desktop
konqueror/remoteencodingplugin/: kremoteencodingplugin.desktop
konqueror/shellcmdplugin/: kshellcmdplugin.desktop
konqueror/sidebar/: konq_sidebartng.desktop
konqueror/src/: konqview.cpp
kwrite/: kwrite.desktop
lib/konq/: directory_bookmarkbar.desktop  konqpopupmenuplugin.desktop
nsplugins/: khtml_plugins.desktop
nsplugins/sdk/: npupp.h
nsplugins/viewer/: nsplugin.cpp
plasma/applets/: CMakeLists.txt
plasma/applets/folderview/: CMakeLists.txt  abstractitemview.cpp  abstractitemview.h  actionoverlay.cpp  actionoverlay.h  animator.cpp  animator.h  asyncfiletester.cpp  asyncfiletester.h  config-folderview.h.cmake  dialog.cpp  dialog.h  dialogshadows.cpp  dirlister.cpp  dirlister.h  folderview.cpp  folderview.h  folderviewConfig.ui  folderviewDisplayConfig.ui  folderviewFilterConfig.ui  folderviewLocationConfig.ui  folderviewPreviewConfig.ui  folderviewadapter.cpp  folderviewadapter.h  halopainter.cpp  iconview.cpp  iconview.h  iconwidget.cpp  iconwidget.h  itemeditor.cpp  itemeditor.h  label.cpp  listview.cpp  listview.h  plasma-applet-folderview.desktop  plasma-folderview-default.desktop  popupview.cpp  popupview.h  previewpluginsmodel.cpp  previewpluginsmodel.h  (+7 more)
plasma/applets/folderview/declarative/: CMakeLists.txt  dirlisterapplet.cpp  dirlisterapplet.h  dirmodel.cpp  dirmodel.h  plasma-applet-dirlister.desktop
plasma/applets/folderview/declarative/package/: metadata.desktop
plasma/applets/folderview/declarative/package/contents/ui/: DirectoryApplet.qml
plasma/applets/folderview/settings/: displaypage.cpp  displaypage.h  draft.cpp  filterpage.cpp  filterpage.h  locationpage.cpp  locationpage.h  mimemodel.cpp  mimemodel.h  options.cpp  options.h  optionsbase.cpp  optionsbase.h  pagebase.cpp  pagebase.h  placesfiltermodel.h  previewpluginsmodel.cpp  proxymimemodel.cpp  proxymimemodel.h  settings.cpp  settings.h
plasma/applets/folderview/settings/models/: mimemodel.cpp  previewpluginsmodel.cpp  previewpluginsmodel.h  proxymimemodel.cpp
plasma/applets/folderview/settings/options/: displayoptions.cpp  displayoptions.h  filteroptions.cpp  filteroptions.h  generaloptions.cpp  generaloptions.h
plasma/applets/folderview/settings/pages/: displaypage.cpp  displaypage.h  filterpage.cpp  filterpage.h  generalpage.cpp  generalpage.h  locationpage.cpp  locationpage.h
plasma/applets/folderview/settings/ui/: folderviewDisplayConfig.ui  folderviewFilterConfig.ui  folderviewLocationConfig.ui
plasma/applets/quickfolder/: CMakeLists.txt  ConfigureChecks.cmake  Messages.sh  abstractitemview.h  actionoverlay.cpp  actionoverlay.h  animator.cpp  asyncfiletester.cpp  dialog.cpp  folderviewDisplayConfig.ui  folderviewLocationConfig.ui  folderviewadapter.cpp  iconview.cpp  iconview.h  itemeditor.h  label.cpp  label.h  listview.cpp  listview.h  mimemodels.cpp  mimemodels.h  plasma-applet-quickfolder.desktop  proxymodel.cpp  proxymodel.h  quickfolder.cpp  quickfolder.h  remotewallpapersetter.cpp  remotewallpapersetter.h  style.h  tooltipwidget.cpp  tooltipwidget.h
(+258 files in other folders)
